[fix] proposicoes layout had excessive alignment directives, now its centering properly.

--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -40,16 +40,25 @@
     object-fit: cover;
     /* overflow hidden is not necessary in some browsers. */
     overflow: hidden;
-    width: 54px;
-    height: 54px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
-    margin: 0 5px 0 0;
+    margin: 8px 5px;
 }
 
-.avatar-text{
+.user-menu {
+    padding-left: 10px;
+    text-align: center;
+    margin: inherit;
+    background-color: #11A294;
+    width: 180px;
+}
+
+.avatar-text {
+    padding-right: 10px;
     margin: auto;
-    padding-right: 15px;
-    font-size: x-large;
+    font-size: 0.8em;
+    font-weight: bold;
 }
 
 md-bottom-sheet md-icon {
